--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,1 +1,10 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
+/* Custom Tailwind Config */
+@layer base {
+    body {
+      @apply bg-gray-50 text-gray-800;
+    }
+  }
